fixed account login and signup expanding to overflow the header area
Now the login form blends in seamlessly with the header area and the header has been sized to a minimum of 40 px and the account div to a max of 40 px.
This allows the header to expand as needed but the account div to not overflow the minimum height; which takes in regard current one line header style metric.

--- a/_attachments/style/main.css
+++ b/_attachments/style/main.css
@@ -25,10 +25,22 @@ a.missing {
   box-shadow: 0 0 10px rgba(0,0,0,0.5);
   -moz-box-shadow: 0 0 10px rgba(0,0,0,0.5);
   -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.5);
+	min-height:40px;
 }
 
 #account {
   float:right;
+}
+
+#account form {
+	margin:0;
+	padding-top:4px;
+	padding-bottom:4px;
+	margin-top:-10px;
+	border:none;
+	background:none;
+	max-height:40px;
+	overflow:hidden;
 }
 
 #profile {
@@ -38,7 +50,6 @@ a.missing {
   margin-bottom:8px;
   float:right;
   border-left:1px solid #AABBCC;
-
 }
 
 p.menu {
